tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_bitwise_xor_assign_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingBitwiseXorAssignRhs;

fn main() -> i32 {
  let value = 9;
  value ^= ;
  return value;
}
